<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

        <TextView
                android:id="@+id/txtStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps" />

        <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_below="@+id/txtStep"/>

        <TextView
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_below="@+id/btnStart"/>

        <EditText
                android:id="@+id/ip_activity_main"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip_activity_main"
                android:inputType="text"
                android:layout_below="@+id/txtStatus"/>
        <EditText
                android:id="@+id/port_activity_main"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/port_activity_main"
                android:inputType="text"
                android:layout_below="@+id/ip_activity_main"/>

        <LinearLayout
                android:id="@+id/stop_and_changeIP_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/port_activity_main">


            <Button android:id="@+id/change_socket_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/change_socket_activity_main"/>

            <Button android:id="@+id/stop_transmission_activity_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/stop_transmission_activity_main"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/label_list_activity_main"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_below="@+id/stop_and_changeIP_button"></LinearLayout>

    </RelativeLayout>
</ScrollView>